--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -415,23 +415,19 @@ Expected output:
 
 === Time Trial: `timetrial`
 
-Starts a time trial for flashcards with tag <TAG> for <TIME> seconds per flashcard.
+Starts a time trial for flashcards with specified tags <TAG>.
 
-    Format: timetrial tag/TAG...
+    Format: timetrial TAG...
 
-Example usage:
+    Example usage: timetrial cs2103tuml hard
 
-    timetrial cs2103tuml hard
-
-Expected output:
-
-    Time trial started
+    Expected output: Time trial started
 
 * At least one tag must be specified.
 * If more than one tag is specified, selects all flashcards that contains all of the specified tags.
 * Default <TIME> will be 5 seconds.
 * Answer will be flashed for 3 seconds.
-* If a command (other than `show`) is inputted during the time trial, the time trial will be terminated and the inputted
+* If a flashcard command (other than `show`) is inputted during the time trial, the time trial will be terminated and the inputted
 command will be executed.
 * Executing `show` will reveal the answer of the flashcard in advance, but will not terminate the time trial.
 
@@ -1034,6 +1030,9 @@ e.g `delete 1`
 
 * *Filter* : `filter tag/TAG...` +
 e.g `filter cs2103tuml`
+
+* *Time Trial* : `timetrial TAG...` +
+e.g `timetrial cs2103t uml`
 
 * *View* : `view INDEX` +
 e.g `view 1`
