--- a/docs/team/kalsyc.adoc
+++ b/docs/team/kalsyc.adoc
@@ -74,8 +74,8 @@ include::../DeveloperGuide.adoc[tag=undoredo]
 include::../DeveloperGuide.adoc[tag=tag]
 
 
-== PROJECT: PowerPointLabs
+//== PROJECT: PowerPointLabs
 
 ---
 
-_{Optionally, you may include other projects in your portfolio.}_
+//_{Optionally, you may include other projects in your portfolio.}_
